structure implemented in the challange exercise

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <script src="JSON.json"></script>
     <title>Document</title>
+    <style>
+        .flex-wrap{
+            display: flex;
+            flex-wrap: wrap;
+        }
+        img {
+            height: 12em;
+            width: 15em;
+        }
+        .bigImg{
+            height: 24em;
+            width: 30em;
+        }
+    </style>
 </head>
 <body>
+
+    <div id="main" class="flex-wrap">
+        
+    </div>
 
     <script src="script.js"></script>
 </body>
