--- a/challenge/index.html
+++ b/challenge/index.html
@@ -9,7 +9,10 @@
             display: flex;
             flex-wrap: wrap;
         }
-        img {
+        img{ 
+            /*changes on click coming from the script.js file here we 
+            simply give the initial value (expand(x) and close(y) */
+
             height: 12em;
             width: 15em;
         }
